Wed Aug 26 13:48:33 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/tempfile.rb (Tempfile#unlink): reverted r23494, since the
	  usage in RubyInline is considered wrong.

Wed Aug 26 12:36:58 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (collect_local_variables_in_env): skips internal variables.
	  [ruby-core:25125]

Tue Aug 25 23:51:07 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/enc-unicode.rb: added for generate name2ctype.kwd.
	  contributed by Run Paint Run Run [ruby-core:24775]

	* enc/unicode.c (CodeRanges): move definitions to name2ctype.h.

	* enc/unicode/name2ctype.h.blt, enc/unicode/name2ctype.kwd,
	  enc/unicode/name2ctype.src: updated to v5.1.

	* enc/unicode/UnicodeData.txt, enc/unicode/Scripts.txt: added v5.1.

	* Makefile.in: add rule to generate name2ctype.kwd from
	  UnicodeData.txt and Scripts.txt.

Tue Aug 25 22:31:51 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in (MKDIR_P): Set 'mkdir -p' to MKDIR_P
	  when AC_PROG_MKDIR_P doesn't set MKDIR_P.

Tue Aug 25 17:38:22 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bignum.c (rb_big_clone, bigmul1_normal, bigdivrem): trivial
	  optimization.

	* bignum.c (big2dbl): truncates zero digits to get rid of possible
	  underflow.

Tue Aug 25 12:22:25 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in (enc/unicode/name2ctype.h): explicitly ignores the
	  result of diff and turns -e option off, because *BSD make passes
	  it by default.

Tue Aug 25 02:16:37 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (DLDFLAGS): use linker_flag and changed undefined
	  and multiply_defined behaviors. cf [ruby-core:25086].

Mon Aug 24 21:31:37 2009  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/maker/base.rb, test/rss/test_maker_2.0.rb: fix a bug
	that RSS Maker doesn't accept 'false' as guid's isPermaLink.
	Reported by Joe Holt. Thanks!!!

Mon Aug 24 18:58:56 2009  NAKAMURA Usaku  <usa@ruby-lang.org>
